# twomice

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile.dev  Makefile  PROJECT_STRUCTURE.md  TASKS.md  docker-compose.dev.yaml  docker-compose.yaml
.github/workflows/: ci.yml  deploy.yml
db/: Cargo.toml  compose.yaml
db/migrations/auth/: 000_auth_schema.up.sql  001_auth_funcs.up.sql
db/migrations/moderation/: 000_moderation_schema.down.sql  000_moderation_schema.up.sql
db/migrations/social/: 000_social_schema.up.sql
db/migrations/social-feed/: 000_social_feed_schema.down.sql  000_social_feed_schema.up.sql
db/src/: main.rs
deploy/: deploy.sh  docker-compose.base.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  prod.env.example  test.env.example
deploy/caddy/: Caddyfile
deploy/nginx/: twomice.conf
docs/superpowers/specs/: 2026-05-19-frontend-design.md
scripts/: build-all.sh  dev-native.sh  fix-and-migrate.sh  migrate-all.sh
services/gateway/: Cargo.toml  Dockerfile
services/gateway/src/: gateway_app.rs  main.rs  request_handler.rs
services/social-feed/: Cargo.toml  Dockerfile
services/social-feed/src/: main.rs
shared/burrow_db/src/: lib.rs
shared/easy_db/src/: lib.rs
