[package]
name = "twomice-db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.0"
clap = { version = "4.5.53", features = ["derive"] }
dotenvy = "0.15.7"
rand = "0.8"
sqlx = { version = "0.9.0-alpha.1", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono", "migrate", "tls-native-tls"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
